# buckpal

./: .gitignore  Cargo.toml  Dockerfile  README.md
.dependabot/: config.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
adapters/buckpal-persistence/: Cargo.toml  sqlx-data.json
adapters/buckpal-persistence/src/: account_entity.rs  account_mapper.rs  account_persistence_adapter.rs  account_repository.rs  activity_entity.rs  activity_repository.rs  lib.rs
adapters/buckpal-web/: Cargo.toml
adapters/buckpal-web/src/: main.rs  utils.rs
buckpal-application/: Cargo.toml
buckpal-application/src/: lib.rs
buckpal-application/src/application/port/incoming/: get_account_balance_query.rs  mod.rs  send_money_use_case.rs
buckpal-application/src/application/port/outgoing/: account_lock.rs  load_account_port.rs  mod.rs  update_account_state_port.rs
buckpal-application/src/application/service/: error.rs  get_account_balance_service.rs  mod.rs  money_transfer_properties.rs  no_op_account_lock.rs  send_money_service.rs
buckpal-application/src/domain/: account.rs  activity.rs  activity_window.rs  mod.rs
buckpal-domain/: Cargo.toml
buckpal-domain/src/: account.rs  activity.rs  activity_window.rs  lib.rs
migrations/: 20200715224355_create_account.sql.sql  20200715224357_create_activity.sql.sql
