[package]
name = "buckpal-application"
version = "0.1.0"
authors = ["Anthony Mittaz <sync@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.13"
rusty-money  = "0.3.5"
thiserror = "1.0.20"
anyhow = "1.0.32"
cfg-if = "0.1.10"
async-trait = "0.1.36"
rust_decimal = "1.7.0"

[dev-dependencies]
mockall = "0.7.2"
mocktopus = "0.7.5"
async-std = { version = "1.6.2", features = ["attributes"] }

[lib]
doctest = false
