[package]
name = "buckpal-application"
version = "0.1.0"
authors = ["Anthony Mittaz <sync@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.15"
rusty-money  = "0.3.5"
thiserror = "1.0.21"
anyhow = "1.0.32"
cfg-if = "0.1.10"
async-trait = "0.1.40"
rust_decimal = "1.8.1"

[dev-dependencies]
mockall = "0.8.1"
mocktopus = "0.7.5"
async-std = { version = "1.6.4", features = ["attributes"] }

[lib]
doctest = false
