[package]
name = "buckpal-persistence"
version = "0.1.0"
authors = ["Anthony Mittaz <sync@me.com>"]
edition = "2018"
exclude = ["test/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = "0.1.18"
sqlx = { git = "https://github.com/launchbadge/sqlx", features = ["postgres", "chrono", "uuid", "offline", "bigdecimal"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
futures = "0.3.5"
chrono = "0.4.11"
uuid = { version = "0.8.1", features = ["v4"] }
anyhow = "1.0.31"
log = "0.4.8"
buckpal-application = { path = "../../buckpal-application" }
rusty-money = "0.3.4"
rust_decimal = "1.6.0"
bigdecimal = "0.1.2"
thiserror = "1.0.20"
async-trait = "0.1.36"

[dev-dependencies]
async-std = { version = "1.6.2", features = ["attributes"] }
