[package]
name = "buckpal-persistence"
version = "0.1.0"
authors = ["Anthony Mittaz <sync@me.com>"]
edition = "2018"
exclude = ["test/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { git = "https://github.com/launchbadge/sqlx", features = ["postgres", "chrono", "offline", "bigdecimal"] }
chrono = "0.4.19"
anyhow = "1.0.38"
thiserror = "1.0.23"
rusty-money = "0.3.6"
rust_decimal = "1.10.1"
bigdecimal = "0.2.0"
async-trait = "0.1.42"
buckpal-application = { path = "../../buckpal-application" }

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }

[lib]
doctest = false
