[package]
name = "buckpal-web"
version = "0.1.0"
authors = ["Anthony Mittaz <sync@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { git = "https://github.com/launchbadge/sqlx", features = ["postgres", "chrono", "offline", "bigdecimal"] }
smol = "0.1.18"
dotenv = "0.15.0"
env_logger = "0.7.1"
log = "0.4.11"
anyhow = "1.0.32"
thiserror = "1.0.20"
buckpal-application = { path = "../../buckpal-application" }
buckpal-persistence = { path = "../buckpal-persistence" }
tide = "0.11.0"
rusty-money = "0.3.4"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"

[dev-dependencies]
async-std = { version = "1.6.2", features = ["attributes"] }
