[package]
name = "buckpal-web"
version = "0.1.0"
authors = ["Anthony Mittaz <sync@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { git = "https://github.com/launchbadge/sqlx", features = ["postgres", "chrono", "offline", "bigdecimal"] }
dotenv = "0.15.0"
env_logger = "0.8.2"
log = "0.4.13"
anyhow = "1.0.38"
thiserror = "1.0.23"
buckpal-application = { path = "../../buckpal-application" }
buckpal-persistence = { path = "../buckpal-persistence" }
tide = "0.13.0"
rusty-money = "0.3.6"
serde = { version = "1.0.120", features = ["derive"] }
serde_json = "1.0.61"
async-std = { version = "1.10.0", features = ["attributes"] }
